--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="input-group f-class">
                 <div>
                     <label for="">First Class ($150)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <input id="ticket-number" class="inp-style inp-width" value="0">
                 </div>
                 <div class="plus-minus-btn">
                     <button id="increase-button" class="plus">+</button>
@@ -65,8 +65,8 @@
                     <input class="inp-style inp-width" type="number" name="">
                 </div>
                 <div class="plus-minus-btn">
-                    <button id="increase-button" class="plus">+</button>
-                    <button id="decrease-button" class="minus">-</button>
+                    <!-- <button id="increase-button" class="plus">+</button>
+                    <button id="decrease-button" class="minus">-</button> -->
                 </div>
             </div>
             <div class="calculations">
@@ -111,7 +111,13 @@
         <!--Thank You-->
 
         <script>
-
+            const increaseBtn = document.getElementById('increase-button');
+            increaseBtn.addEventListener('click', function(){
+                const ticketCount = document.getElementById('ticket-number');
+                const ticketCountNumber = parseInt(ticketCount.value);
+                const ticketNumber = ticketCountNumber + 1;
+                ticketCount.value = ticketNumber;
+            })
         </script>
 </body>
 
