--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             <div class="input-group f-class">
                 <div>
                     <label for="">Economy ($100)</label>
-                    <input id="ticket-number" class="inp-style inp-width" value="0">
+                    <input id="ticket-number2" class="inp-style inp-width" value="0">
                 </div>
                 <div class="plus-minus-btn">
-                    <button id="increase-button" class="plus">+</button>
-                    <button id="decrease-button" class="minus">-</button>
+                    <button id="increase-button2" class="plus">+</button>
+                    <button id="decrease-button2" class="minus">-</button>
                 </div>
             </div>
             <div class="calculations">
@@ -111,7 +111,15 @@
         <!--Thank You-->
 
         <script>
-            //is increase or decrease function
+            const increaseBtn = document.getElementById('increase-button');
+            increaseBtn.addEventListener('click', function(){
+                increaseDecrease(true);
+            })
+            const decreaseBtn = document.getElementById('decrease-button');
+            decreaseBtn.addEventListener('click', function(){
+                increaseDecrease(false);
+            })
+            //is increase or decrease function 1
             function increaseDecrease(isIncrease){
                 const ticketCount = document.getElementById('ticket-number');
                 let ticketCountNumber = parseInt(ticketCount.value);
@@ -124,14 +132,28 @@
                 }
                 ticketCount.value = ticketNumber;
             }
-            const increaseBtn = document.getElementById('increase-button');
-            increaseBtn.addEventListener('click', function(){
-                increaseDecrease(true);
+           
+            const increaseBtn2 = document.getElementById('increase-button2');
+            increaseBtn2.addEventListener('click', function(){
+                increaseDecrease2(true);
             })
-            const decreaseBtn = document.getElementById('decrease-button');
-            decreaseBtn.addEventListener('click', function(){
-                increaseDecrease(false);
+            const decreaseBtn2 = document.getElementById('decrease-button2');
+            decreaseBtn2.addEventListener('click', function(){
+                increaseDecrease2(false);
             })
+             //is increase or decrease function 2
+             function increaseDecrease2(isIncrease){
+                const ticketCount2 = document.getElementById('ticket-number2');
+                let ticketCountNumber2 = parseInt(ticketCount2.value);
+                // const ticketNumber = ticketCountNumber + 1;
+                if(isIncrease == true){
+                    ticketNumber2 = ticketCountNumber2 + 1;
+                }
+                else if(isIncrease == false && ticketCountNumber2 > 0 ){
+                    ticketNumber2 = ticketCountNumber2 - 1;
+                }
+                ticketCount2.value = ticketNumber2;
+            }
         </script>
 </body>
 
