--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <p>Subtotal</p>
                     </div>
                     <div class="right">
-                        <p>$500</p>
+                        <p id="sub-total">$00</p>
                     </div>
                 </div>
 
@@ -84,7 +84,7 @@
                         <p>Charge 10% VAT</p>
                     </div>
                     <div class="right">
-                        <p>$50</p>
+                        <p id="tax-amount">$00</p>
                     </div>
                 </div>
                 <hr>
@@ -93,7 +93,7 @@
                         <h4>Total</h4>
                     </div>
                     <div class="right">
-                        <p>$550</p>
+                        <p id="grand-total">$00</p>
                     </div>
                 </div>
             </div>
@@ -112,47 +112,67 @@
 
         <script>
             const increaseBtn = document.getElementById('increase-button');
-            increaseBtn.addEventListener('click', function(){
+            increaseBtn.addEventListener('click', function () {
                 increaseDecrease(true);
             })
             const decreaseBtn = document.getElementById('decrease-button');
-            decreaseBtn.addEventListener('click', function(){
+            decreaseBtn.addEventListener('click', function () {
                 increaseDecrease(false);
             })
             //is increase or decrease function 1
-            function increaseDecrease(isIncrease){
+            function increaseDecrease(isIncrease) {
                 const ticketCount = document.getElementById('ticket-number');
                 let ticketCountNumber = parseInt(ticketCount.value);
                 // const ticketNumber = ticketCountNumber + 1;
-                if(isIncrease == true){
+                if (isIncrease == true) {
                     ticketNumber = ticketCountNumber + 1;
                 }
-                else if(isIncrease == false && ticketCountNumber > 0 ){
+                else if (isIncrease == false && ticketCountNumber > 0) {
                     ticketNumber = ticketCountNumber - 1;
                 }
                 ticketCount.value = ticketNumber;
+                calculateTotal();
             }
-           
+
             const increaseBtn2 = document.getElementById('increase-button2');
-            increaseBtn2.addEventListener('click', function(){
+            increaseBtn2.addEventListener('click', function () {
                 increaseDecrease2(true);
             })
             const decreaseBtn2 = document.getElementById('decrease-button2');
-            decreaseBtn2.addEventListener('click', function(){
+            decreaseBtn2.addEventListener('click', function () {
                 increaseDecrease2(false);
             })
-             //is increase or decrease function 2
-             function increaseDecrease2(isIncrease){
+            //is increase or decrease function 2
+            function increaseDecrease2(isIncrease) {
                 const ticketCount2 = document.getElementById('ticket-number2');
                 let ticketCountNumber2 = parseInt(ticketCount2.value);
                 // const ticketNumber = ticketCountNumber + 1;
-                if(isIncrease == true){
+                if (isIncrease == true) {
                     ticketNumber2 = ticketCountNumber2 + 1;
                 }
-                else if(isIncrease == false && ticketCountNumber2 > 0 ){
+                else if (isIncrease == false && ticketCountNumber2 > 0) {
                     ticketNumber2 = ticketCountNumber2 - 1;
                 }
                 ticketCount2.value = ticketNumber2;
+                calculateTotal();
+            }
+
+            function calculateTotal() {
+                const ticketInput = document.getElementById('ticket-number');
+                const ticketTotal = parseInt(ticketInput.value);
+
+                const ticketInput2 = document.getElementById('ticket-number2');
+                const ticketTotal2 = parseInt(ticketInput2.value);
+
+                const subTotal = ticketTotal * 150 + ticketTotal2 * 100;
+                document.getElementById('sub-total').innerText = '$' + subTotal;
+
+                //Tax calculation
+                const taxAmount = subTotal * 0.1;
+                document.getElementById('tax-amount').innerText = '$' + taxAmount;
+
+                const grandTotal = subTotal + taxAmount;
+                document.getElementById('grand-total').innerText = '$' + grandTotal;
             }
         </script>
 </body>
