--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <!--Booking Section-->
-    <main class="main-content container">
+    <main id="main-booking" class="main-content container">
         <div class="booking-form">
             <h3>Booking Flights</h3>
             <div class="input-group">
@@ -97,84 +97,93 @@
                     </div>
                 </div>
             </div>
-            <button class="btn-style">Book Now</button>
+            <button id="book-success" class="btn-style">Book Now</button>
         </div>
-
-        <div class="booking-content">
-            <h1>discover <br> around the world</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicingelit. Provident voluptatibus quam fuga laborumalias
-                veniam libero autem quasi maxime ullam vero nama imi dolor, architecto ab facilis eaque deserunt nobise
-                voluptatibus quam</p>
-        </div>
+        <section>
+            <div class="booking-content">
+                <h1>discover <br> around the world</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicingelit. Provident voluptatibus quam fuga laborumalias
+                    veniam libero autem quasi maxime ullam vero nama imi dolor, architecto ab facilis eaque deserunt
+                    nobise
+                    voluptatibus quam</p>
+            </div>
         </section>
-
         <!--Thank You-->
+    </main>
+    <section id="successful-part">
+        <h1>You Have Successfully Booked Your Ticket.</h1>
+        <h2>Thank You.</h2>
+    </section>
 
-        <script>
-            const increaseBtn = document.getElementById('increase-button');
-            increaseBtn.addEventListener('click', function () {
-                increaseDecrease(true);
-            })
-            const decreaseBtn = document.getElementById('decrease-button');
-            decreaseBtn.addEventListener('click', function () {
-                increaseDecrease(false);
-            })
-            //is increase or decrease function 1
-            function increaseDecrease(isIncrease) {
-                const ticketCount = document.getElementById('ticket-number');
-                let ticketCountNumber = parseInt(ticketCount.value);
-                // const ticketNumber = ticketCountNumber + 1;
-                if (isIncrease == true) {
-                    ticketNumber = ticketCountNumber + 1;
-                }
-                else if (isIncrease == false && ticketCountNumber > 0) {
-                    ticketNumber = ticketCountNumber - 1;
-                }
-                ticketCount.value = ticketNumber;
-                calculateTotal();
+    <script>
+        const increaseBtn = document.getElementById('increase-button');
+        increaseBtn.addEventListener('click', function () {
+            increaseDecrease(true);
+        })
+        const decreaseBtn = document.getElementById('decrease-button');
+        decreaseBtn.addEventListener('click', function () {
+            increaseDecrease(false);
+        })
+        //is increase or decrease function 1
+        function increaseDecrease(isIncrease) {
+            const ticketCount = document.getElementById('ticket-number');
+            let ticketCountNumber = parseInt(ticketCount.value);
+            // const ticketNumber = ticketCountNumber + 1;
+            if (isIncrease == true) {
+                ticketNumber = ticketCountNumber + 1;
             }
-
-            const increaseBtn2 = document.getElementById('increase-button2');
-            increaseBtn2.addEventListener('click', function () {
-                increaseDecrease2(true);
-            })
-            const decreaseBtn2 = document.getElementById('decrease-button2');
-            decreaseBtn2.addEventListener('click', function () {
-                increaseDecrease2(false);
-            })
-            //is increase or decrease function 2
-            function increaseDecrease2(isIncrease) {
-                const ticketCount2 = document.getElementById('ticket-number2');
-                let ticketCountNumber2 = parseInt(ticketCount2.value);
-                // const ticketNumber = ticketCountNumber + 1;
-                if (isIncrease == true) {
-                    ticketNumber2 = ticketCountNumber2 + 1;
-                }
-                else if (isIncrease == false && ticketCountNumber2 > 0) {
-                    ticketNumber2 = ticketCountNumber2 - 1;
-                }
-                ticketCount2.value = ticketNumber2;
-                calculateTotal();
+            else if (isIncrease == false && ticketCountNumber > 0) {
+                ticketNumber = ticketCountNumber - 1;
             }
+            ticketCount.value = ticketNumber;
+            calculateTotal();
+        }
 
-            function calculateTotal() {
-                const ticketInput = document.getElementById('ticket-number');
-                const ticketTotal = parseInt(ticketInput.value);
-
-                const ticketInput2 = document.getElementById('ticket-number2');
-                const ticketTotal2 = parseInt(ticketInput2.value);
-
-                const subTotal = ticketTotal * 150 + ticketTotal2 * 100;
-                document.getElementById('sub-total').innerText = '$' + subTotal;
-
-                //Tax calculation
-                const taxAmount = subTotal * 0.1;
-                document.getElementById('tax-amount').innerText = '$' + taxAmount;
-
-                const grandTotal = subTotal + taxAmount;
-                document.getElementById('grand-total').innerText = '$' + grandTotal;
+        const increaseBtn2 = document.getElementById('increase-button2');
+        increaseBtn2.addEventListener('click', function () {
+            increaseDecrease2(true);
+        })
+        const decreaseBtn2 = document.getElementById('decrease-button2');
+        decreaseBtn2.addEventListener('click', function () {
+            increaseDecrease2(false);
+        })
+        //is increase or decrease function 2
+        function increaseDecrease2(isIncrease) {
+            const ticketCount2 = document.getElementById('ticket-number2');
+            let ticketCountNumber2 = parseInt(ticketCount2.value);
+            // const ticketNumber = ticketCountNumber + 1;
+            if (isIncrease == true) {
+                ticketNumber2 = ticketCountNumber2 + 1;
             }
-        </script>
+            else if (isIncrease == false && ticketCountNumber2 > 0) {
+                ticketNumber2 = ticketCountNumber2 - 1;
+            }
+            ticketCount2.value = ticketNumber2;
+            calculateTotal();
+        }
+
+        function calculateTotal() {
+            const ticketInput = document.getElementById('ticket-number');
+            const ticketTotal = parseInt(ticketInput.value);
+
+            const ticketInput2 = document.getElementById('ticket-number2');
+            const ticketTotal2 = parseInt(ticketInput2.value);
+            // Sub Total Calculation
+            const subTotal = ticketTotal * 150 + ticketTotal2 * 100;
+            document.getElementById('sub-total').innerText = '$' + subTotal;
+            //Tax calculation
+            const taxAmount = subTotal * 0.1;
+            document.getElementById('tax-amount').innerText = '$' + taxAmount;
+            //Grand Total Calculation
+            const grandTotal = subTotal + taxAmount;
+            document.getElementById('grand-total').innerText = '$' + grandTotal;
+        }
+        const mainForm = document.getElementById('book-success');
+        mainForm.addEventListener('click', function () {
+            document.getElementById('main-booking').style = 'display:none';
+            document.getElementById('successful-part').style = 'display:block';
+        })
+    </script>
 </body>
 
 </html>
