successful part fix

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="container">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a class="active" href="#">Sign Up</a></li>
@@ -113,6 +113,8 @@
     <section id="successful-part">
         <h1>You Have Successfully Booked Your Ticket.</h1>
         <h2>Thank You.</h2>
+        <h4>Want To Book Another Ticket</h4>
+        <a href="index.html"> &#60 &#60 Go back </a>
     </section>
 
     <script>
