--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="input-group f-class">
                 <div>
                     <label for="">First Class ($150)</label>
-                    <input id="ticket-number" class="inp-style inp-width" value="0">
+                    <input id="firstClass-ticket-number" class="inp-style inp-width" value="0">
                 </div>
                 <div class="plus-minus-btn">
                     <button id="increase-button" class="plus">+</button>
@@ -62,7 +62,7 @@
             <div class="input-group f-class">
                 <div>
                     <label for="">Economy ($100)</label>
-                    <input id="ticket-number2" class="inp-style inp-width" value="0">
+                    <input id="economyClass-ticket-number" class="inp-style inp-width" value="0">
                 </div>
                 <div class="plus-minus-btn">
                     <button id="increase-button2" class="plus">+</button>
@@ -120,15 +120,25 @@
     <script>
         const increaseBtn = document.getElementById('increase-button');
         increaseBtn.addEventListener('click', function () {
-            increaseDecrease(true);
+            increaseDecrease('firstClass', true);
         })
         const decreaseBtn = document.getElementById('decrease-button');
         decreaseBtn.addEventListener('click', function () {
-            increaseDecrease(false);
+            increaseDecrease('firstClass', false);
         })
-        //is increase or decrease function 1
-        function increaseDecrease(isIncrease) {
-            const ticketCount = document.getElementById('ticket-number');
+        const increaseBtn2 = document.getElementById('increase-button2');
+        increaseBtn2.addEventListener('click', function () {
+            increaseDecrease('economyClass', true);
+        })
+        const decreaseBtn2 = document.getElementById('decrease-button2');
+        decreaseBtn2.addEventListener('click', function () {
+            increaseDecrease('economyClass', false);
+        })
+
+
+        //ticket increase or decrease function
+        function increaseDecrease(ticket, isIncrease) {
+            const ticketCount = document.getElementById(ticket + '-ticket-number');
             let ticketCountNumber = parseInt(ticketCount.value);
             // const ticketNumber = ticketCountNumber + 1;
             if (isIncrease == true) {
@@ -141,34 +151,13 @@
             calculateTotal();
         }
 
-        const increaseBtn2 = document.getElementById('increase-button2');
-        increaseBtn2.addEventListener('click', function () {
-            increaseDecrease2(true);
-        })
-        const decreaseBtn2 = document.getElementById('decrease-button2');
-        decreaseBtn2.addEventListener('click', function () {
-            increaseDecrease2(false);
-        })
-        //is increase or decrease function 2
-        function increaseDecrease2(isIncrease) {
-            const ticketCount2 = document.getElementById('ticket-number2');
-            let ticketCountNumber2 = parseInt(ticketCount2.value);
-            // const ticketNumber = ticketCountNumber + 1;
-            if (isIncrease == true) {
-                ticketNumber2 = ticketCountNumber2 + 1;
-            }
-            else if (isIncrease == false && ticketCountNumber2 > 0) {
-                ticketNumber2 = ticketCountNumber2 - 1;
-            }
-            ticketCount2.value = ticketNumber2;
-            calculateTotal();
-        }
 
+        //Total Calculation Function
         function calculateTotal() {
-            const ticketInput = document.getElementById('ticket-number');
+            const ticketInput = document.getElementById('firstClass-ticket-number');
             const ticketTotal = parseInt(ticketInput.value);
 
-            const ticketInput2 = document.getElementById('ticket-number2');
+            const ticketInput2 = document.getElementById('economyClass-ticket-number');
             const ticketTotal2 = parseInt(ticketInput2.value);
             // Sub Total Calculation
             const subTotal = ticketTotal * 150 + ticketTotal2 * 100;
@@ -180,6 +169,7 @@
             const grandTotal = subTotal + taxAmount;
             document.getElementById('grand-total').innerText = '$' + grandTotal;
         }
+        //hide and successful page load
         const mainForm = document.getElementById('book-success');
         mainForm.addEventListener('click', function () {
             document.getElementById('main-booking').style = 'display:none';
